@@ -26,17 +26,17 @@ _STLP_BEGIN_NAMESPACE
 // Absolute value
 _STLP_TEMPLATE_NULL
 _STLP_DECLSPEC float _STLP_CALL abs(const complex<float>& __z) {
-  return hypot(__z._M_re, __z._M_im);
+  return ::hypot(__z._M_re, __z._M_im);
 }
 _STLP_TEMPLATE_NULL
 _STLP_DECLSPEC double _STLP_CALL abs(const complex<double>& __z) {
-  return hypot(__z._M_re, __z._M_im);
+  return ::hypot(__z._M_re, __z._M_im);
 }
 
 #ifndef _STLP_NO_LONG_DOUBLE
 _STLP_TEMPLATE_NULL
 _STLP_DECLSPEC long double _STLP_CALL abs(const complex<long double>& __z) {
-  return hypot(__z._M_re, __z._M_im);
+  return ::hypot(__z._M_re, __z._M_im);
 }
 #endif
 
@@ -44,35 +44,35 @@ _STLP_DECLSPEC long double _STLP_CALL abs(const complex<long double>& __z) {
 
 _STLP_TEMPLATE_NULL 
 _STLP_DECLSPEC float _STLP_CALL arg(const complex<float>& __z) {
-  return atan2(__z._M_im, __z._M_re);
+  return ::atan2(__z._M_im, __z._M_re);
 }
 
 _STLP_TEMPLATE_NULL 
 _STLP_DECLSPEC double _STLP_CALL arg(const complex<double>& __z) {
-  return atan2(__z._M_im, __z._M_re);
+  return ::atan2(__z._M_im, __z._M_re);
 }
 
 #ifndef _STLP_NO_LONG_DOUBLE
 _STLP_TEMPLATE_NULL
 _STLP_DECLSPEC long double _STLP_CALL arg(const complex<long double>& __z) {
-  return atan2(__z._M_im, __z._M_re);
+  return ::atan2(__z._M_im, __z._M_re);
 }
 #endif
 
 // Construct a complex number from polar representation
 _STLP_TEMPLATE_NULL
 _STLP_DECLSPEC complex<float> _STLP_CALL polar(const float& __rho, const float& __phi) {
-  return complex<float>(__rho * cos(__phi), __rho * sin(__phi));
+  return complex<float>(__rho * ::cos(__phi), __rho * ::sin(__phi));
 }
 _STLP_TEMPLATE_NULL
 _STLP_DECLSPEC complex<double> _STLP_CALL polar(const double& __rho, const double& __phi) {
-  return complex<double>(__rho * cos(__phi), __rho * sin(__phi));
+  return complex<double>(__rho * ::cos(__phi), __rho * ::sin(__phi));
 }
 
 #ifndef _STLP_NO_LONG_DOUBLE
 _STLP_TEMPLATE_NULL 
 _STLP_DECLSPEC complex<long double> _STLP_CALL polar(const long double& __rho, const long double& __phi) {
-  return complex<long double>(__rho * cos(__phi), __rho * sin(__phi));
+  return complex<long double>(__rho * ::cos(__phi), __rho * ::sin(__phi));
 }
 #endif
 
@@ -216,16 +216,16 @@ complex<float> _STLP_CALL
 sqrt(const complex<float>& z) {
   float re = z._M_re;
   float im = z._M_im;
-  float mag = hypot(re, im);
+  float mag = ::hypot(re, im);
   complex<float> result;
 
   if (mag == 0.) {
     result._M_re = result._M_im = 0.f;
   } else if (re > 0.f) {
-    result._M_re = sqrt(0.5f * (mag + re));
+    result._M_re = ::sqrt(0.5f * (mag + re));
     result._M_im = im/result._M_re/2.f;
   } else {
-    result._M_im = sqrt(0.5f * (mag - re));
+    result._M_im = ::sqrt(0.5f * (mag - re));
     if (im < 0.f)
       result._M_im = - result._M_im;
     result._M_re = im/result._M_im/2.f;
@@ -238,16 +238,16 @@ complex<double>  _STLP_CALL
 sqrt(const complex<double>& z) {
   double re = z._M_re;
   double im = z._M_im;
-  double mag = hypot(re, im);
+  double mag = ::hypot(re, im);
   complex<double> result;
 
   if (mag == 0.) {
     result._M_re = result._M_im = 0.;
   } else if (re > 0.) {
-    result._M_re = sqrt(0.5 * (mag + re));
+    result._M_re = ::sqrt(0.5 * (mag + re));
     result._M_im = im/result._M_re/2;
   } else {
-    result._M_im = sqrt(0.5 * (mag - re));
+    result._M_im = ::sqrt(0.5 * (mag - re));
     if (im < 0.)
       result._M_im = - result._M_im;
     result._M_re = im/result._M_im/2;
@@ -260,16 +260,16 @@ complex<long double> _STLP_CALL
 sqrt(const complex<long double>& z) {
   long double re = z._M_re;
   long double im = z._M_im;
-  long double mag = hypot(re, im);
+  long double mag = ::hypot(re, im);
   complex<long double> result;
 
   if (mag == 0.L) {
     result._M_re = result._M_im = 0.L;
   } else if (re > 0.L) {
-    result._M_re = sqrt(0.5L * (mag + re));
+    result._M_re = ::sqrt(0.5L * (mag + re));
     result._M_im = (im/result._M_re) * .5L;
   } else {
-    result._M_im = sqrt(0.5L * (mag - re));
+    result._M_im = ::sqrt(0.5L * (mag - re));
     if (im < 0.L)
       result._M_im = - result._M_im;
     result._M_re = (im/result._M_im) * .5L;
