@@ -52,14 +52,14 @@ _STLP_BEGIN_NAMESPACE
   static const float float_limit = float(M_LN2 * FLT_MAX_EXP);
   static const double double_limit = M_LN2 * DBL_MAX_EXP;
 #  else
-  static const float float_limit = log(FLT_MAX);
-  static const double double_limit = log(DBL_MAX);
+  static const float float_limit = ::log(FLT_MAX);
+  static const double double_limit = ::log(DBL_MAX);
 #  endif
 #  if !defined (_STLP_NO_LONG_DOUBLE)
 #    if defined (M_LN2l)
   static const long double ldouble_limit = M_LN2l * LDBL_MAX_EXP;
 #    else
-  static const long double ldouble_limit = log(LDBL_MAX);
+  static const long double ldouble_limit = ::log(LDBL_MAX);
 #    endif
 #  endif
 #endif
@@ -69,19 +69,19 @@ _STLP_BEGIN_NAMESPACE
 // sin
 
 _STLP_DECLSPEC complex<float>  _STLP_CALL sin(const complex<float>& z) {
-  return complex<float>(sin(z._M_re) * cosh(z._M_im),
-                        cos(z._M_re) * sinh(z._M_im));
+  return complex<float>(::sin(z._M_re) * ::cosh(z._M_im),
+                        ::cos(z._M_re) * ::sinh(z._M_im));
 }
 
 _STLP_DECLSPEC complex<double> _STLP_CALL sin(const complex<double>& z) {
-  return complex<double>(sin(z._M_re) * cosh(z._M_im),
-                         cos(z._M_re) * sinh(z._M_im));
+  return complex<double>(::sin(z._M_re) * ::cosh(z._M_im),
+                         ::cos(z._M_re) * ::sinh(z._M_im));
 }
 
 #ifndef _STLP_NO_LONG_DOUBLE
 _STLP_DECLSPEC complex<long double> _STLP_CALL sin(const complex<long double>& z) {
-  return complex<long double>(sin(z._M_re) * cosh(z._M_im),
-                              cos(z._M_re) * sinh(z._M_im));
+  return complex<long double>(::sin(z._M_re) * ::cosh(z._M_im),
+                              ::cos(z._M_re) * ::sinh(z._M_im));
 }
 #endif
 
@@ -89,19 +89,19 @@ _STLP_DECLSPEC complex<long double> _STLP_CALL sin(const complex<long double>& z
 // cos
 
 _STLP_DECLSPEC complex<float> _STLP_CALL cos(const complex<float>& z) {
-  return complex<float>(cos(z._M_re) * cosh(z._M_im),
-                        -sin(z._M_re) * sinh(z._M_im));
+  return complex<float>(::cos(z._M_re) * ::cosh(z._M_im),
+                        -::sin(z._M_re) * ::sinh(z._M_im));
 }
 
 _STLP_DECLSPEC complex<double> _STLP_CALL cos(const complex<double>& z) {
-  return complex<double>(cos(z._M_re) * cosh(z._M_im),
-                        -sin(z._M_re) * sinh(z._M_im));
+  return complex<double>(::cos(z._M_re) * ::cosh(z._M_im),
+                        -::sin(z._M_re) * ::sinh(z._M_im));
 }
 
 #ifndef _STLP_NO_LONG_DOUBLE
 _STLP_DECLSPEC complex<long double> _STLP_CALL cos(const complex<long double>& z) {
-  return complex<long double>(cos(z._M_re) * cosh(z._M_im),
-                              -sin(z._M_re) * sinh(z._M_im));
+  return complex<long double>(::cos(z._M_re) * ::cosh(z._M_im),
+                              -::sin(z._M_re) * ::sinh(z._M_im));
 }
 # endif
 
@@ -112,11 +112,11 @@ _STLP_DECLSPEC complex<float> _STLP_CALL tan(const complex<float>& z) {
   float re2 = 2.f * z._M_re;
   float im2 = 2.f * z._M_im;
 
-  if (abs(im2) > float_limit)
+  if (::abs(im2) > float_limit)
     return complex<float>(0.f, (im2 > 0 ? 1.f : -1.f));
   else {
-    float den = cos(re2) + cosh(im2);
-    return complex<float>(sin(re2) / den, sinh(im2) / den);
+    float den = ::cos(re2) + ::cosh(im2);
+    return complex<float>(::sin(re2) / den, ::sinh(im2) / den);
   }
 }
 
@@ -124,11 +124,11 @@ _STLP_DECLSPEC complex<double> _STLP_CALL tan(const complex<double>& z) {
   double re2 = 2. * z._M_re;
   double im2 = 2. * z._M_im;
 
-  if (abs(im2) > double_limit)
+  if (::abs(im2) > double_limit)
     return complex<double>(0., (im2 > 0 ? 1. : -1.));
   else {
-    double den = cos(re2) + cosh(im2);
-    return complex<double>(sin(re2) / den, sinh(im2) / den);
+    double den = ::cos(re2) + ::cosh(im2);
+    return complex<double>(::sin(re2) / den, ::sinh(im2) / den);
   }
 }
 
@@ -136,11 +136,11 @@ _STLP_DECLSPEC complex<double> _STLP_CALL tan(const complex<double>& z) {
 _STLP_DECLSPEC complex<long double> _STLP_CALL tan(const complex<long double>& z) {
   long double re2 = 2.l * z._M_re;
   long double im2 = 2.l * z._M_im;
-  if (abs(im2) > ldouble_limit)
+  if (::abs(im2) > ldouble_limit)
     return complex<long double>(0.l, (im2 > 0 ? 1.l : -1.l));
   else {
-    long double den = cos(re2) + cosh(im2);
-    return complex<long double>(sin(re2) / den, sinh(im2) / den);
+    long double den = ::cos(re2) + ::cosh(im2);
+    return complex<long double>(::sin(re2) / den, ::sinh(im2) / den);
   }
 }
 
@@ -150,19 +150,19 @@ _STLP_DECLSPEC complex<long double> _STLP_CALL tan(const complex<long double>& z
 // sinh
 
 _STLP_DECLSPEC complex<float> _STLP_CALL sinh(const complex<float>& z) {
-  return complex<float>(sinh(z._M_re) * cos(z._M_im),
-                        cosh(z._M_re) * sin(z._M_im));
+  return complex<float>(::sinh(z._M_re) * ::cos(z._M_im),
+                        ::cosh(z._M_re) * ::sin(z._M_im));
 }
 
 _STLP_DECLSPEC complex<double> _STLP_CALL sinh(const complex<double>& z) {
-  return complex<double>(sinh(z._M_re) * cos(z._M_im),
-                         cosh(z._M_re) * sin(z._M_im));
+  return complex<double>(::sinh(z._M_re) * ::cos(z._M_im),
+                         ::cosh(z._M_re) * ::sin(z._M_im));
 }
 
 #ifndef _STLP_NO_LONG_DOUBLE
 _STLP_DECLSPEC complex<long double> _STLP_CALL sinh(const complex<long double>& z) {
-  return complex<long double>(sinh(z._M_re) * cos(z._M_im),
-                              cosh(z._M_re) * sin(z._M_im));
+  return complex<long double>(::sinh(z._M_re) * ::cos(z._M_im),
+                              ::cosh(z._M_re) * ::sin(z._M_im));
 }
 #endif
 
@@ -170,19 +170,19 @@ _STLP_DECLSPEC complex<long double> _STLP_CALL sinh(const complex<long double>& 
 // cosh
 
 _STLP_DECLSPEC complex<float> _STLP_CALL cosh(const complex<float>& z) {
-  return complex<float>(cosh(z._M_re) * cos(z._M_im),
-                        sinh(z._M_re) * sin(z._M_im));
+  return complex<float>(::cosh(z._M_re) * ::cos(z._M_im),
+                        ::sinh(z._M_re) * ::sin(z._M_im));
 }
 
 _STLP_DECLSPEC complex<double> _STLP_CALL cosh(const complex<double>& z) {
-  return complex<double>(cosh(z._M_re) * cos(z._M_im),
-                         sinh(z._M_re) * sin(z._M_im));
+  return complex<double>(::cosh(z._M_re) * ::cos(z._M_im),
+                         ::sinh(z._M_re) * ::sin(z._M_im));
 }
 
 #ifndef _STLP_NO_LONG_DOUBLE
 _STLP_DECLSPEC complex<long double> _STLP_CALL cosh(const complex<long double>& z) {
-  return complex<long double>(cosh(z._M_re) * cos(z._M_im),
-                              sinh(z._M_re) * sin(z._M_im));
+  return complex<long double>(::cosh(z._M_re) * ::cos(z._M_im),
+                              ::sinh(z._M_re) * ::sin(z._M_im));
 }
 #endif
 
@@ -192,22 +192,22 @@ _STLP_DECLSPEC complex<long double> _STLP_CALL cosh(const complex<long double>& 
 _STLP_DECLSPEC complex<float> _STLP_CALL tanh(const complex<float>& z) {
   float re2 = 2.f * z._M_re;
   float im2 = 2.f * z._M_im;
-  if (abs(re2) > float_limit)
+  if (::abs(re2) > float_limit)
     return complex<float>((re2 > 0 ? 1.f : -1.f), 0.f);
   else {
-    float den = cosh(re2) + cos(im2);
-    return complex<float>(sinh(re2) / den, sin(im2) / den);
+    float den = ::cosh(re2) + ::cos(im2);
+    return complex<float>(::sinh(re2) / den, ::sin(im2) / den);
   }
 }
 
 _STLP_DECLSPEC complex<double> _STLP_CALL tanh(const complex<double>& z) {
   double re2 = 2. * z._M_re;
   double im2 = 2. * z._M_im;  
-  if (abs(re2) > double_limit)
+  if (::abs(re2) > double_limit)
     return complex<double>((re2 > 0 ? 1. : -1.), 0.);
   else {
-    double den = cosh(re2) + cos(im2);
-    return complex<double>(sinh(re2) / den, sin(im2) / den);
+    double den = ::cosh(re2) + ::cos(im2);
+    return complex<double>(::sinh(re2) / den, ::sin(im2) / den);
   }
 }
 
@@ -215,11 +215,11 @@ _STLP_DECLSPEC complex<double> _STLP_CALL tanh(const complex<double>& z) {
 _STLP_DECLSPEC complex<long double> _STLP_CALL tanh(const complex<long double>& z) {
   long double re2 = 2.l * z._M_re;
   long double im2 = 2.l * z._M_im;
-  if (abs(re2) > ldouble_limit)
+  if (::abs(re2) > ldouble_limit)
     return complex<long double>((re2 > 0 ? 1.l : -1.l), 0.l);
   else {
-    long double den = cosh(re2) + cos(im2);
-    return complex<long double>(sinh(re2) / den, sin(im2) / den);
+    long double den = ::cosh(re2) + ::cos(im2);
+    return complex<long double>(::sinh(re2) / den, ::sin(im2) / den);
   }
 }
 #endif
